minhas_policiesss/search/floodgate-allow-metrics-server-kube-system-to-search-indexer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-allow-metrics-server-kube-system-to-search-indexer
  namespace: search
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow
    source-workload: metrics-server
    source-namespace: kube-system
    target-service: search-indexer
    target-port: '8080'
spec:
  podSelector:
    matchLabels:
      app: search-indexer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: metrics-server
      ports:
        - port: 8080
          protocol: TCP
